Fixed spacing between cards

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,6 +11,7 @@
    bottom: 0;
    width: 100%;
    color: #FAF9F6;
+   margin-top: 32px;
  }
  .footer-links {
    display: flex;
